--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,90 @@
-.bg-container {
+::-webkit-input-placeholder {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+
+:-ms-input-placeholder {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+
+::-ms-input-placeholder {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+
+::placeholder {
+  font-family: "Montserrat";
+  font-weight: bold;
+}
+
+.bg-container, header {
   margin-left: 140px;
   margin-right: 140px;
+}
+
+.navbar {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 45% 55%;
+      grid-template-columns: 45% 55%;
+  padding-top: 52px;
+  padding-bottom: 60px;
+}
+
+.navbar .site-name {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 44px;
+  /* identical to box height */
+  text-transform: lowercase;
+}
+
+.navbar .search-form {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 70% 30%;
+      grid-template-columns: 70% 30%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navbar .search-form .search-input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  -webkit-transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
+}
+
+.navbar .search-form .search-btn {
+  color: white;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  width: 200px;
+  border: none;
+  margin: 4px 2px;
+  padding: 12px 42px;
+  background: #C63882;
+  border-radius: 5px;
 }
 
 .section-header {
@@ -33,7 +117,7 @@
 }
 
 .section-header .bg-container-column .bg-texte {
-  width: 150vh;
+  width: 400px;
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
