--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,64 @@
 @import 'variable';
 
-.bg-container{
+
+::placeholder{
+  font-family: $font-familly;
+  font-weight: bold;
+}
+.bg-container, header{
   margin-left: 140px;
   margin-right: 140px;
+}
+.navbar{
+  display: grid;
+  grid-template-columns: 45% 55%;
+  padding-top: 52px;
+  padding-bottom: 60px;
+  .site-name{
+    font-family: $font-familly;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+    /* identical to box height */
+
+    text-transform: lowercase;
+  }
+  .search-form{
+    display:grid;
+    grid-template-columns: 70% 30%;
+    align-items:center;
+    .search-input{
+      display:block;
+      width:100%;
+      height:50px;
+      padding:.375rem .75rem;
+      font-size:1rem;
+      font-weight:400;
+      line-height:1.5;
+      color:#495057;
+      background-color:#fff;
+      background-clip:padding-box;
+      border:1px solid #ced4da;
+      border-radius:.25rem;
+      transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out
+    }
+    .search-btn{
+      color: white;
+      font-family: $font-familly;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 29px;
+      text-align: center;
+      width: 200px;
+      border: none;
+      margin: 4px 2px;
+      padding: 12px 42px;
+      background: $primary_color;
+      border-radius: 5px;
+      }
+  }
 }
 .section-header{
 display: grid;
@@ -21,7 +77,7 @@ grid-template-columns: 60% 40%;
     color: $texte_color1;
   }
   .bg-texte{
-    width: 150vh;
+    width: 400px;
     font-family: $font-familly;
     font-style: normal;
     font-weight: 400;
