--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,3 +1,7 @@
 $primary_color: #C63882;
 $texte_color1: #868686;
-$font-familly: 'Montserrat'
+$bg: #F9F9F9;
+$font-familly: 'Montserrat';
+$poppins: 'Poppins';
+$color-text1: #000000;
+$secondary-color: #FFE8F4;
